<resources>
    <string name="app_name">Inside Net</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_dashboard">Dashboard</string>
    <string name="fragment_notifications">Notifications</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Создать аккаунт</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Зарегистрироваться</string>
    <string name="fragment_launcher">Запуск</string>
    <string name="fragment_register">Регистрация</string>
    <string name="fragment_login">Вход</string>
    <string name="register_subtitle_basic_info">Общая информация</string>
    <string name="register_subtitle_contact_info">Контактная информация</string>
    <string name="register_subtitle_login_info">Данные для входа</string>
    <string name="register_subtitle_data_access">Запрос прав доступа</string>
    <string name="login_hint">Логин*</string>
    <string name="password_hint">Пароль*</string>
    <string name="login_mail_hint">Корпоративная почта*</string>
    <string name="about_hint">О себе*</string>
    <string name="name_hint">Имя*</string>
    <string name="patronymic_hint">Отчество*</string>
    <string name="position_hint">Должность*</string>
    <string name="phone_hint">Телефон*</string>
    <string name="telegram_hint">Telegram</string>
    <string name="surname_hint">Фамилия*</string>
    <string name="nav_arg_toolbar_subtitle" translatable="false">subtitle</string>
    <string name="register_next_page">Следующая страница</string>
    <string name="section_profile">Профиль</string>
    <string name="section_contacts">Контакты</string>
    <string name="section_data_access">Права</string>
    <string name="section_holidays">Отпуск</string>
    <string name="account_type_hint">Тип аккаунта</string>
    <string name="contacts_info_corporate_email_hint">*В разделе контактов также будет указана Ваша корпоративная почта</string>
</resources>