<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.sc222.insidenet.ui.proflie.ui.home.HomeFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.sc222.insidenet.ui.proflie.ui.dashboard.DashboardFragment"
        android:label="@string/fragment_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.sc222.insidenet.ui.proflie.ui.notifications.NotificationsFragment"
        android:label="@string/fragment_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>